--- a/src/pages/docs/overflow.mdx
+++ b/src/pages/docs/overflow.mdx
@@ -277,160 +277,160 @@ Use `overflow-y-scroll` to allow vertical scrolling and always show scrollbars u
 Use `overflow-scroll` to add scrollbars to an element. Unlike `.overflow-auto`, which only shows scrollbars if they are necessary, this utility always shows them. Note that some operating systems (like macOS) hide unnecessary scrollbars regardless of this setting.
 
 <Example p="none">
-  <div class="mx-4 bg-white shadow-xl overflow-hidden">
+  <div class="mx-4 bg-white dark:bg-gray-800 shadow-xl overflow-hidden">
     <div class="overflow-scroll grid grid-cols-[70px,repeat(7,150px)] grid-rows-[auto,repeat(16,50px)] max-h-[350px]">
       <!-- Calendar frame -->
-      <div class="row-start-[1] col-start-[1] sticky top-0 z-10 bg-white border-gray-1 text-gray-900 border-b text-sm font-medium py-2"></div>
-      <div class="row-start-[1] col-start-[2] sticky top-0 z-10 bg-white border-gray-1 text-gray-900 border-b text-sm font-medium py-2 text-center">Sun</div>
-      <div class="row-start-[1] col-start-[3] sticky top-0 z-10 bg-white border-gray-1 text-gray-900 border-b text-sm font-medium py-2 text-center">Mon</div>
-      <div class="row-start-[1] col-start-[4] sticky top-0 z-10 bg-white border-gray-1 text-gray-900 border-b text-sm font-medium py-2 text-center">Tue</div>
-      <div class="row-start-[1] col-start-[5] sticky top-0 z-10 bg-white border-gray-1 text-gray-900 border-b text-sm font-medium py-2 text-center">Wed</div>
-      <div class="row-start-[1] col-start-[6] sticky top-0 z-10 bg-white border-gray-1 text-gray-900 border-b text-sm font-medium py-2 text-center">Thu</div>
-      <div class="row-start-[1] col-start-[7] sticky top-0 z-10 bg-white border-gray-1 text-gray-900 border-b text-sm font-medium py-2 text-center">Fri</div>
-      <div class="row-start-[1] col-start-[8] sticky top-0 z-10 bg-white border-gray-1 text-gray-900 border-b text-sm font-medium py-2 text-center">Sat</div>
-      <div class="row-start-[2] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">5 AM</div>
-      <div class="row-start-[2] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[2] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[2] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[2] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[2] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[2] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[2] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[3] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">6 AM</div>
-      <div class="row-start-[3] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[3] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[3] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[3] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[3] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[3] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[3] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[4] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">7 AM</div>
-      <div class="row-start-[4] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[4] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[4] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[4] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[4] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[4] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[4] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[5] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">8 AM</div>
-      <div class="row-start-[5] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[5] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[5] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[5] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[5] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[5] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[5] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[6] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">9 AM</div>
-      <div class="row-start-[6] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[6] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[6] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[6] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[6] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[6] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[6] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[7] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">10 AM</div>
-      <div class="row-start-[7] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[7] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[7] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[7] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[7] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[7] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[7] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[8] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">11 AM</div>
-      <div class="row-start-[8] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[8] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[8] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[8] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[8] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[8] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[8] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[9] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">12 PM</div>
-      <div class="row-start-[9] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[9] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[9] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[9] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[9] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[9] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[9] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[10] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">1 PM</div>
-      <div class="row-start-[10] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[10] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[10] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[10] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[10] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[10] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[10] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[11] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">2 PM</div>
-      <div class="row-start-[11] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[11] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[11] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[11] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[11] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[11] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[11] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[12] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">3 PM</div>
-      <div class="row-start-[12] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[12] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[12] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[12] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[12] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[12] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[12] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[13] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">4 PM</div>
-      <div class="row-start-[13] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[13] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[13] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[13] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[13] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[13] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[13] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[14] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">5 PM</div>
-      <div class="row-start-[14] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[14] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[14] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[14] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[14] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[14] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[14] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[15] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">6 PM</div>
-      <div class="row-start-[15] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[15] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[15] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[15] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[15] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[15] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[15] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[16] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">7 PM</div>
-      <div class="row-start-[16] col-start-[2] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[16] col-start-[3] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[16] col-start-[4] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[16] col-start-[5] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[16] col-start-[6] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[16] col-start-[7] border-gray-100 border-b border-r"></div>
-      <div class="row-start-[16] col-start-[8] border-gray-100 border-b"></div>
-      <div class="row-start-[17] col-start-[1] border-gray-100 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white font-medium">8 PM</div>
-      <div class="row-start-[17] col-start-[2] border-gray-100 border-r"></div>
-      <div class="row-start-[17] col-start-[3] border-gray-100 border-r"></div>
-      <div class="row-start-[17] col-start-[4] border-gray-100 border-r"></div>
-      <div class="row-start-[17] col-start-[5] border-gray-100 border-r"></div>
-      <div class="row-start-[17] col-start-[6] border-gray-100 border-r"></div>
-      <div class="row-start-[17] col-start-[7] border-gray-100 border-r"></div>
+      <div class="row-start-[1] col-start-[1] sticky top-0 z-10 bg-white dark:bg-gradient-to-b dark:from-gray-600 dark:to-gray-700 border-gray-100 dark:border-black/10 bg-clip-padding text-gray-900 dark:text-gray-200 border-b text-sm font-medium py-2"></div>
+      <div class="row-start-[1] col-start-[2] sticky top-0 z-10 bg-white dark:bg-gradient-to-b dark:from-gray-600 dark:to-gray-700 border-gray-100 dark:border-black/10 bg-clip-padding text-gray-900 dark:text-gray-200 border-b text-sm font-medium py-2 text-center">Sun</div>
+      <div class="row-start-[1] col-start-[3] sticky top-0 z-10 bg-white dark:bg-gradient-to-b dark:from-gray-600 dark:to-gray-700 border-gray-100 dark:border-black/10 bg-clip-padding text-gray-900 dark:text-gray-200 border-b text-sm font-medium py-2 text-center">Mon</div>
+      <div class="row-start-[1] col-start-[4] sticky top-0 z-10 bg-white dark:bg-gradient-to-b dark:from-gray-600 dark:to-gray-700 border-gray-100 dark:border-black/10 bg-clip-padding text-gray-900 dark:text-gray-200 border-b text-sm font-medium py-2 text-center">Tue</div>
+      <div class="row-start-[1] col-start-[5] sticky top-0 z-10 bg-white dark:bg-gradient-to-b dark:from-gray-600 dark:to-gray-700 border-gray-100 dark:border-black/10 bg-clip-padding text-gray-900 dark:text-gray-200 border-b text-sm font-medium py-2 text-center">Wed</div>
+      <div class="row-start-[1] col-start-[6] sticky top-0 z-10 bg-white dark:bg-gradient-to-b dark:from-gray-600 dark:to-gray-700 border-gray-100 dark:border-black/10 bg-clip-padding text-gray-900 dark:text-gray-200 border-b text-sm font-medium py-2 text-center">Thu</div>
+      <div class="row-start-[1] col-start-[7] sticky top-0 z-10 bg-white dark:bg-gradient-to-b dark:from-gray-600 dark:to-gray-700 border-gray-100 dark:border-black/10 bg-clip-padding text-gray-900 dark:text-gray-200 border-b text-sm font-medium py-2 text-center">Fri</div>
+      <div class="row-start-[1] col-start-[8] sticky top-0 z-10 bg-white dark:bg-gradient-to-b dark:from-gray-600 dark:to-gray-700 border-gray-100 dark:border-black/10 bg-clip-padding text-gray-900 dark:text-gray-200 border-b text-sm font-medium py-2 text-center">Sat</div>
+      <div class="row-start-[2] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">5 AM</div>
+      <div class="row-start-[2] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[2] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[2] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[2] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[2] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[2] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[2] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[3] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">6 AM</div>
+      <div class="row-start-[3] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[3] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[3] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[3] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[3] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[3] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[3] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[4] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">7 AM</div>
+      <div class="row-start-[4] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[4] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[4] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[4] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[4] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[4] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[4] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[5] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">8 AM</div>
+      <div class="row-start-[5] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[5] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[5] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[5] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[5] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[5] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[5] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[6] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">9 AM</div>
+      <div class="row-start-[6] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[6] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[6] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[6] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[6] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[6] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[6] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[7] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">10 AM</div>
+      <div class="row-start-[7] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[7] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[7] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[7] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[7] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[7] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[7] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[8] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">11 AM</div>
+      <div class="row-start-[8] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[8] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[8] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[8] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[8] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[8] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[8] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[9] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">12 PM</div>
+      <div class="row-start-[9] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[9] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[9] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[9] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[9] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[9] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[9] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[10] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">1 PM</div>
+      <div class="row-start-[10] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[10] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[10] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[10] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[10] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[10] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[10] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[11] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">2 PM</div>
+      <div class="row-start-[11] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[11] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[11] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[11] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[11] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[11] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[11] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[12] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">3 PM</div>
+      <div class="row-start-[12] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[12] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[12] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[12] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[12] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[12] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[12] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[13] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">4 PM</div>
+      <div class="row-start-[13] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[13] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[13] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[13] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[13] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[13] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[13] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[14] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">5 PM</div>
+      <div class="row-start-[14] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[14] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[14] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[14] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[14] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[14] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[14] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[15] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">6 PM</div>
+      <div class="row-start-[15] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[15] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[15] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[15] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[15] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[15] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[15] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[16] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">7 PM</div>
+      <div class="row-start-[16] col-start-[2] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[16] col-start-[3] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[16] col-start-[4] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[16] col-start-[5] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[16] col-start-[6] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[16] col-start-[7] border-gray-100 dark:border-gray-200/5 border-b border-r"></div>
+      <div class="row-start-[16] col-start-[8] border-gray-100 dark:border-gray-200/5 border-b"></div>
+      <div class="row-start-[17] col-start-[1] border-gray-100 dark:border-gray-200/5 border-r text-xs p-1.5 text-right text-gray-400 uppercase sticky left-0 bg-white dark:bg-gray-800 font-medium">8 PM</div>
+      <div class="row-start-[17] col-start-[2] border-gray-100 dark:border-gray-200/5 border-r"></div>
+      <div class="row-start-[17] col-start-[3] border-gray-100 dark:border-gray-200/5 border-r"></div>
+      <div class="row-start-[17] col-start-[4] border-gray-100 dark:border-gray-200/5 border-r"></div>
+      <div class="row-start-[17] col-start-[5] border-gray-100 dark:border-gray-200/5 border-r"></div>
+      <div class="row-start-[17] col-start-[6] border-gray-100 dark:border-gray-200/5 border-r"></div>
+      <div class="row-start-[17] col-start-[7] border-gray-100 dark:border-gray-200/5 border-r"></div>
       <div class="row-start-[17] col-start-[8]"></div>
       <!-- Calendar contents -->
-      <div class="row-start-[2] col-start-3 row-span-4 bg-blue-400/20 border border-blue-700/10 rounded-lg m-1 p-1 flex flex-col">
-        <span class="text-xs text-blue-600">5 AM</span>
-        <span class="text-xs font-medium text-blue-600">Flight to vancouver</span>
-        <span class="text-xs text-blue-600">Toronto YYZ</span>
+      <div class="row-start-[2] col-start-3 row-span-4 bg-blue-400/20 dark:bg-light-blue-600/50 border border-blue-700/10 dark:border-light-blue-500 rounded-lg m-1 p-1 flex flex-col">
+        <span class="text-xs text-blue-600 dark:text-light-blue-100">5 AM</span>
+        <span class="text-xs font-medium text-blue-600 dark:text-light-blue-100">Flight to vancouver</span>
+        <span class="text-xs text-blue-600 dark:text-light-blue-100">Toronto YYZ</span>
       </div>
-      <div class="row-start-[3] col-start-[4] row-span-4 bg-purple-400/20 border border-purple-700/10 rounded-lg m-1 p-1 flex flex-col">
-        <span class="text-xs text-purple-600">6 AM</span>
-        <span class="text-xs font-medium text-purple-600">Breakfast</span>
-        <span class="text-xs text-purple-600">Mel's Diner</span>
+      <div class="row-start-[3] col-start-[4] row-span-4 bg-purple-400/20 dark:bg-fuchsia-600/50 border border-purple-700/10 dark:border-fuchsia-500 rounded-lg m-1 p-1 flex flex-col">
+        <span class="text-xs text-purple-600 dark:text-fuchsia-100">6 AM</span>
+        <span class="text-xs font-medium text-purple-600 dark:text-fuchsia-100">Breakfast</span>
+        <span class="text-xs text-purple-600 dark:text-fuchsia-100">Mel's Diner</span>
       </div>
-      <div class="row-start-[14] col-start-[7] row-span-3 bg-pink-400/20 border border-pink-700/10 rounded-lg m-1 p-1 flex flex-col">
-        <span class="text-xs text-pink-600">5 PM</span>
-        <span class="text-xs font-medium text-pink-600">🎉 Party party 🎉</span>
-        <span class="text-xs text-pink-600">We like to party!</span>
+      <div class="row-start-[14] col-start-[7] row-span-3 bg-pink-400/20 dark:bg-indigo-600/50 border border-pink-700/10 dark:border-indigo-500 rounded-lg m-1 p-1 flex flex-col">
+        <span class="text-xs text-pink-600 dark:text-indigo-100">5 PM</span>
+        <span class="text-xs font-medium text-pink-600 dark:text-indigo-100">🎉 Party party 🎉</span>
+        <span class="text-xs text-pink-600 dark:text-indigo-100">We like to party!</span>
       </div>
     </div>
   </div>
